# video-diffusion-pipeline-parallel

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  EXPERIMENT_REPORT.md  EXPERIMENT_RESULTS.md  EXPERIMENT_RESULTS_JP.md  LICENSE  README.md  README_JP.md  nvidea-setting.txt  pyproject.toml  requirements-dev.txt  requirements.txt
benchmark_results/: comparison_20260215_130650.csv  comparison_20260215_131740.csv  comparison_20260215_132253.csv  comparison_20260215_132754.csv
docs/: benchmark.md  context.md  lt_demo_guide.md  performance_analysis.md
scripts/: benchmark_comparison.sh  benchmark_throughput.sh  compare_with_official.py  generate_video_demo.py  generate_video_official_loop.py  generate_video_use_pipe.py  plot_benchmark_comparison.py  run_official_pipeline.py
src/distributed/: backend.py  setup.py
src/models/: __init__.py  dummy_unet.py  svd_unet.py
src/modes/: benchmark.py  benchmark_data_parallel.py  production.py  simulator.py
src/pipeline/: __init__.py  pipeline.py  step_assignment.py
tests/: test_dummy_unet.py  test_step_assignment.py
